--- a/index.html
+++ b/index.html
@@ -5,7 +5,21 @@
   <meta charset="UTF-8">
   <link rel="icon" href="/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>后台管理系统</title>
+  <title>车辆物流管理系统</title>
+  <!-- GitHub Pages SPA 路由支持 -->
+  <script>
+    // 处理 GitHub Pages 的路由重定向
+    (function(l) {
+      if (l.search[1] === '/' ) {
+        var decoded = l.search.slice(1).split('&').map(function(s) {
+          return s.replace(/~and~/g, '&')
+        }).join('?');
+        window.history.replaceState(null, null,
+            l.pathname.slice(0, -1) + decoded + l.hash
+        );
+      }
+    }(window.location))
+  </script>
 </head>
 
 <body>
